Fixed getLast function not working with older JDK